--- a/.github/workflows/trivy-scheduled-dev.yml
+++ b/.github/workflows/trivy-scheduled-dev.yml
@@ -6,6 +6,7 @@
 # ---------------------------------
 name: Trivy - ghcr image scan - dev
 on:
+  push:
   schedule: # Since dev is the default branch of the repo don't specify
     - cron: "0 9,12,15 * * *"
 jobs:
@@ -23,7 +24,7 @@ jobs:
         run: echo REPOSITORY_OWNER=$(echo ${{ github.repository_owner }} | tr "[:upper:]" "[:lower:]") >> $GITHUB_ENV
 
       - name: Run Trivy on latest dev image
-        uses: aquasecurity/trivy-action@0.26.0
+        uses: aquasecurity/trivy-action@master
         env:
           TRIVY_DB_REPOSITORY: ghcr.io/aquasecurity/trivy-db,public.ecr.aws/aquasecurity/trivy-db
         with:
